src/fhir/snapshots/adt_to_fhir__fhir__mapper__tests__a03_disscharge_snapshot_test.snap
---
source: src/fhir/mapper.rs
expression: b
---
{
  "resourceType": "Bundle",
  "meta": {
    "lastUpdated": "2026-08-14T07:52:30.711879467Z"
  },
  "identifier": {
    "system": "https://fhir.diz.uni-marburg.de/sid/bundle-id",
    "value": "62325574"
  },
  "type": "transaction",
  "entry": [
    {
      "fullUrl": "urn:uuid:2dc887d4-8dfc-5cb2-8858-f841c2106731",
      "resource": {
        "resourceType": "Patient",
        "meta": {
          "source": "test",
          "profile": [
            "https://www.medizininformatik-initiative.de/fhir/core/modul-person/StructureDefinition/Patient|2026.0.1"
          ]
        },
        "identifier": [
          {
            "use": "usual",
            "type": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203",
                  "code": "MR"
                }
              ]
            },
            "system": "https://fhir.diz.uni-marburg.de/sid/patient-id",
            "value": "1396227",
            "assigner": {
              "identifier": {
                "system": "http://fhir.de/sid/arge-ik/iknr",
                "value": "260620431"
              },
              "display": "UKGM - Universitätsklinikum Marburg"
            }
          }
        ],
        "name": [
          {
            "family": "Test",
            "given": [
              "Anton"
            ]
          }
        ],
        "gender": "male",
        "birthDate": "1951-07-04",
        "address": [
          {
            "type": "both",
            "line": [
              "Teststr. 26"
            ],
            "city": "Wetzlar",
            "postalCode": "35578",
            "country": "D"
          }
        ],
        "maritalStatus": {
          "coding": [
            {
              "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
              "code": "M",
              "display": "Married"
            }
          ]
        },
        "multipleBirthBoolean": false
      },
      "request": {
        "method": "POST",
        "url": "Patient",
        "ifNoneExist": "identifier=https://fhir.diz.uni-marburg.de/sid/patient-id|1396227"
      }
    },
    {
      "fullUrl": "urn:uuid:8f11e453-400a-5657-a22a-a4a662a1f319",
      "resource": {
        "resourceType": "Encounter",
        "meta": {
          "source": "test",
          "profile": [
            "https://www.medizininformatik-initiative.de/fhir/core/modul-fall/StructureDefinition/KontaktGesundheitseinrichtung|2026.0.1"
          ]
        },
        "extension": [
          {
            "extension": [
              {
                "url": "ErsteUndZweiteStelle",
                "valueCoding": {
                  "system": "http://fhir.de/CodeSystem/dkgev/AufnahmegrundErsteUndZweiteStelle",
                  "code": "02",
                  "display": "Krankenhausbehandlung, vollstationär mit vorausgegangener vorstationärer Behandlung"
                }
              }
            ],
            "url": "http://fhir.de/StructureDefinition/Aufnahmegrund"
          }
        ],
        "identifier": [
          {
            "use": "usual",
            "system": "https://fhir.diz.uni-marburg.de/sid/encounter-admit-id",
            "value": "23232323"
          },
          {
            "use": "official",
            "type": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203",
                  "code": "VN"
                }
              ]
            },
            "system": "https://fhir.diz.uni-marburg.de/sid/encounter-id",
            "value": "23232323"
          }
        ],
        "status": "finished",
        "class": {
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode",
          "code": "IMP",
          "display": "inpatient encounter"
        },
        "type": [
          {
            "coding": [
              {
                "system": "http://fhir.de/CodeSystem/Kontaktebene",
                "code": "einrichtungskontakt",
                "display": "Einrichtungskontakt"
              }
            ]
          }
        ],
        "subject": {
          "reference": "Patient?identifier=https://fhir.diz.uni-marburg.de/sid/patient-id|1396227"
        },
        "period": {
          "start": "2021-11-23T08:04:00Z",
          "end": "2022-08-22T11:09:00Z"
        },
        "diagnosis": [
          {
            "condition": {
              "reference": "Condition?identifier=https://fhir.diz.uni-marburg.de/sid/condition-id|12345677-1.1"
            },
            "use": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/diagnosis-role",
                  "code": "CC",
                  "display": "Chief complaint"
                }
              ]
            },
            "rank": 1
          },
          {
            "condition": {
              "reference": "Condition?identifier=https://fhir.diz.uni-marburg.de/sid/condition-id|12345677-1.1"
            },
            "use": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/diagnosis-role",
                  "code": "AD",
                  "display": "Admission diagnosis"
                }
              ]
            },
            "rank": 1
          },
          {
            "condition": {
              "reference": "Condition?identifier=https://fhir.diz.uni-marburg.de/sid/condition-id|12345678-2.1"
            },
            "use": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/diagnosis-role",
                  "code": "CM",
                  "display": "Comorbidity diagnosis"
                }
              ]
            },
            "rank": 2
          },
          {
            "condition": {
              "reference": "Condition?identifier=https://fhir.diz.uni-marburg.de/sid/condition-id|12345678-2.1"
            },
            "use": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/diagnosis-role",
                  "code": "DD",
                  "display": "Discharge diagnosis"
                }
              ]
            },
            "rank": 2
          },
          {
            "condition": {
              "reference": "Condition?identifier=https://fhir.diz.uni-marburg.de/sid/condition-id|12345679-2.2"
            },
            "use": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/diagnosis-role",
                  "code": "CM",
                  "display": "Comorbidity diagnosis"
                }
              ]
            },
            "rank": 2
          },
          {
            "condition": {
              "reference": "Condition?identifier=https://fhir.diz.uni-marburg.de/sid/condition-id|12345679-2.2"
            },
            "use": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/diagnosis-role",
                  "code": "DD",
                  "display": "Discharge diagnosis"
                }
              ]
            },
            "rank": 2
          }
        ],
        "hospitalization": {
          "admitSource": {
            "coding": [
              {
                "system": "http://terminology.hl7.org/CodeSystem/data-absent-reason",
                "code": "unsupported"
              }
            ]
          },
          "dischargeDisposition": {
            "extension": [
              {
                "extension": [
                  {
                    "url": "ErsteUndZweiteStelle",
                    "valueCoding": {
                      "system": "http://fhir.de/CodeSystem/dkgev/EntlassungsgrundErsteUndZweiteStelle",
                      "code": "01",
                      "display": "Behandlung regulär beendet"
                    }
                  },
                  {
                    "url": "DritteStelle",
                    "valueCoding": {
                      "system": "http://fhir.de/CodeSystem/dkgev/EntlassungsgrundDritteStelle",
                      "code": "9",
                      "display": "keine Angabe"
                    }
                  }
                ],
                "url": "http://fhir.de/StructureDefinition/Entlassungsgrund"
              }
            ]
          }
        },
        "serviceProvider": {
          "reference": "Organization?identifier=http://fhir.de/sid/arge-ik/iknr|260620431"
        }
      },
      "request": {
        "method": "PUT",
        "url": "Encounter?identifier=https://fhir.diz.uni-marburg.de/sid/encounter-admit-id|23232323"
      }
    },
    {
      "fullUrl": "urn:uuid:8566a9de-c0a1-5e75-a371-f3cdce0115a7",
      "resource": {
        "resourceType": "Encounter",
        "meta": {
          "source": "test",
          "profile": [
            "https://www.medizininformatik-initiative.de/fhir/core/modul-fall/StructureDefinition/KontaktGesundheitseinrichtung|2026.0.1"
          ]
        },
        "identifier": [
          {
            "use": "usual",
            "system": "https://fhir.diz.uni-marburg.de/sid/departement-id",
            "value": "30674176"
          },
          {
            "use": "official",
            "type": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203",
                  "code": "VN"
                }
              ]
            },
            "system": "https://fhir.diz.uni-marburg.de/sid/encounter-id",
            "value": "23232323"
          }
        ],
        "status": "finished",
        "class": {
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode",
          "code": "IMP",
          "display": "inpatient encounter"
        },
        "type": [
          {
            "coding": [
              {
                "system": "http://fhir.de/CodeSystem/Kontaktebene",
                "code": "abteilungskontakt",
                "display": "Abteilungskontakt"
              }
            ]
          }
        ],
        "serviceType": {
          "coding": [
            {
              "system": "http://fhir.de/CodeSystem/dkgev/Fachabteilungsschluessel-erweitert",
              "code": "2200",
              "display": "Urologie"
            }
          ]
        },
        "subject": {
          "reference": "Patient?identifier=https://fhir.diz.uni-marburg.de/sid/patient-id|1396227"
        },
        "period": {
          "start": "2021-11-23T08:04:00Z",
          "end": "2022-08-22T11:09:00Z"
        },
        "serviceProvider": {
          "reference": "Organization?identifier=https://fhir.diz.uni-marburg.de/sid/department|URO"
        },
        "partOf": {
          "reference": "Encounter?identifier=https://fhir.diz.uni-marburg.de/sid/encounter-admit-id|23232323"
        }
      },
      "request": {
        "method": "PUT",
        "url": "Encounter?identifier=https://fhir.diz.uni-marburg.de/sid/departement-id|30674176"
      }
    },
    {
      "fullUrl": "urn:uuid:430077c9-de21-56a5-96d5-781bff672ce0",
      "resource": {
        "resourceType": "Encounter",
        "meta": {
          "source": "test",
          "profile": [
            "https://www.medizininformatik-initiative.de/fhir/core/modul-fall/StructureDefinition/KontaktGesundheitseinrichtung|2026.0.1"
          ]
        },
        "identifier": [
          {
            "use": "usual",
            "system": "https://fhir.diz.uni-marburg.de/sid/ward-id",
            "value": "30674176"
          },
          {
            "use": "official",
            "type": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203",
                  "code": "VN"
                }
              ]
            },
            "system": "https://fhir.diz.uni-marburg.de/sid/encounter-id",
            "value": "23232323"
          }
        ],
        "status": "finished",
        "class": {
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode",
          "code": "IMP",
          "display": "inpatient encounter"
        },
        "type": [
          {
            "coding": [
              {
                "system": "http://fhir.de/CodeSystem/Kontaktebene",
                "code": "versorgungsstellenkontakt",
                "display": "Versorgungsstellenkontakt"
              }
            ]
          }
        ],
        "subject": {
          "reference": "Patient?identifier=https://fhir.diz.uni-marburg.de/sid/patient-id|1396227"
        },
        "period": {
          "start": "2021-11-23T08:04:00Z",
          "end": "2022-08-22T11:09:00Z"
        },
        "location": [
          {
            "location": {
              "reference": "Location?identifier=https://fhir.diz.uni-marburg.de/sid/location-caresite-id|UROST133"
            },
            "status": "completed",
            "physicalType": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/location-physical-type",
                  "code": "wa"
                }
              ]
            }
          },
          {
            "location": {
              "reference": "Location?identifier=https://fhir.diz.uni-marburg.de/sid/location-room-id|UROST133_133-03"
            },
            "status": "completed",
            "physicalType": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/location-physical-type",
                  "code": "ro"
                }
              ]
            }
          },
          {
            "location": {
              "reference": "Location?identifier=https://fhir.diz.uni-marburg.de/sid/location-bed-id|UROST133_133-03_1"
            },
            "status": "completed",
            "physicalType": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/location-physical-type",
                  "code": "bd"
                }
              ]
            }
          }
        ],
        "serviceProvider": {
          "reference": "Organization?identifier=https://fhir.diz.uni-marburg.de/sid/ward-id|UROST133"
        },
        "partOf": {
          "reference": "Encounter?identifier=https://fhir.diz.uni-marburg.de/sid/departement-id|30674176"
        }
      },
      "request": {
        "method": "PUT",
        "url": "Encounter?identifier=https://fhir.diz.uni-marburg.de/sid/ward-id|30674176"
      }
    },
    {
      "fullUrl": "urn:uuid:ffe818ad-e8ae-5020-8d54-33cea9990455",
      "resource": {
        "resourceType": "Observation",
        "meta": {
          "source": "test",
          "profile": [
            "https://www.medizininformatik-initiative.de/fhir/core/modul-person/StructureDefinition/Vitalstatus|2026.0.0"
          ]
        },
        "identifier": [
          {
            "use": "usual",
            "system": "https://fhir.diz.uni-marburg.de/sid/observation-id",
            "value": "67162-8_1396227_23232323"
          }
        ],
        "status": "final",
        "category": [
          {
            "coding": [
              {
                "system": "http://terminology.hl7.org/CodeSystem/observation-category",
                "code": "survey"
              }
            ]
          }
        ],
        "code": {
          "coding": [
            {
              "system": "http://loinc.org",
              "code": "67162-8",
              "display": "Patient Disposition"
            }
          ]
        },
        "subject": {
          "reference": "Patient?identifier=https://fhir.diz.uni-marburg.de/sid/patient-id|1396227"
        },
        "encounter": {
          "reference": "Encounter?identifier=https://fhir.diz.uni-marburg.de/sid/encounter-admit-id|23232323"
        },
        "effectiveDateTime": "2021-11-23T08:04:00Z",
        "valueCodeableConcept": {
          "coding": [
            {
              "system": "https://www.medizininformatik-initiative.de/fhir/core/modul-person/CodeSystem/Vitalstatus",
              "code": "L"
            }
          ]
        }
      },
      "request": {
        "method": "PUT",
        "url": "Observation?identifier=https://fhir.diz.uni-marburg.de/sid/observation-id|67162-8_1396227_23232323"
      }
    },
    {
      "fullUrl": "urn:uuid:4a655d3b-9d11-5f93-9755-6ea824528737",
      "resource": {
        "resourceType": "Organization",
        "meta": {
          "source": "test"
        },
        "identifier": [
          {
            "use": "usual",
            "system": "https://fhir.diz.uni-marburg.de/sid/department",
            "value": "URO"
          }
        ],
        "type": [
          {
            "coding": [
              {
                "system": "http://terminology.hl7.org/CodeSystem/organization-type",
                "code": "dept"
              }
            ]
          }
        ],
        "name": "Urologie"
      },
      "request": {
        "method": "PUT",
        "url": "Organization?identifier=https://fhir.diz.uni-marburg.de/sid/department|URO"
      }
    },
    {
      "fullUrl": "urn:uuid:2e911c6a-a73f-5c14-9731-f6a4b70b9cb4",
      "resource": {
        "resourceType": "Organization",
        "meta": {
          "source": "test"
        },
        "identifier": [
          {
            "use": "usual",
            "system": "https://fhir.diz.uni-marburg.de/sid/ward-id",
            "value": "UROST133"
          }
        ],
        "type": [
          {
            "coding": [
              {
                "system": "http://terminology.hl7.org/CodeSystem/organization-type",
                "code": "other"
              }
            ]
          }
        ],
        "partOf": {
          "reference": "Organization?identifier=https://fhir.diz.uni-marburg.de/sid/department|URO"
        }
      },
      "request": {
        "method": "PUT",
        "url": "Organization?identifier=https://fhir.diz.uni-marburg.de/sid/ward-id|UROST133"
      }
    }
  ]
}
